@@ -1,3 +1,11 @@
+  - Make JSON encoder pass non refs straight through,
+    so that if a previous filter generates a scalar,
+    then this gets sent as-is.
+
+  - Make JSON decoder pass refs straight through, to
+    act as a no-op if the input has already decoded
+    it's data into a hash.
+
   - Remove spurious warnings from reconnect code.
 
 0.006
